History
=======

Version 0.4 - unreleased
------------------------

New features
~~~~~~~~~~~~

- Allow for easier subclassing of HTMLComposer.  The ``_vars()``
  method is now more generally applicable and easily to override.
  [nouri]

- Made adding thirdparty Channels possible. This works the same as
  with Collectors - you simply implement you custom channel and add
  a factory to the collective.dancing.channel.channels list.
  Preview and edit forms are now class methods on ManageChannelView
  to make it easier to subclass for your custom channels.
  [tmog]

- Pass on raw item as received from the collector to the composer
  (template).  Making use of this raw item will obviously bind the
  implementation of the composer to that of the collector.  However,
  it's considered useful for custom implementations that need total
  control and that know what collector they'll be using.

  This required an API change in IComposer.render(); the ``items``
  argument is now a list of 2-tuples instead of a list of formatted
  items.
  [nouri]

- Added Polish translation by Barbara Struk
  [naro]

- Added another type of scheduler: TimedScheduler.  This one allows to
  schedule a number of send-outs with an exact datetime.  Its main use
  is for the "send newsletter" form on a context where we want to
  specify a send-out date in the future.
  [nouri]

- The confirmation view will now confirm pending subscriptions to any
  channel.  This saves us from having to send a separate confirmation
  e-mail for every channel a user subscribes to.  This feature isn't
  used anywhere in S&D core at this point, but it's useful if you're
  writing custom subscription forms.
  [nouri]

- Added SubjectsCollectorBase template class that you can use to
  create a collector based on a vocabulary.  This vocabulary may come
  from anywhere, like from ATVocabularyManager or from the list of all
  subjects/tags available in your site.
  [nouri]
