@@ -2,6 +2,8 @@ from zope import schema
 
 import collective.singing.interfaces
 
+from collective.dancing import MessageFactory as _
+
 class IFullFormatter(collective.singing.interfaces.IFormatItem):
     """Format the item for use as main newsletter content.
 
@@ -18,5 +20,22 @@ class IHTMLComposer(collective.singing.interfaces.IComposer,
     """
 
     stylesheet = schema.Text(
-        title=u"CSS Stylesheet",
-        description=u"The stylesheet will be applied to the document.")
+        title=_(u"CSS Stylesheet"),
+        description=_(u"The stylesheet will be applied to the document."),
+        required=False,
+        )
+    from_name = schema.TextLine(
+        title=_(u"From name"),
+        description=_(u"The sender name that will appear in messages sent from this composer."),
+        required=False,
+        )
+    from_address = schema.TextLine(
+        title=_(u"From address"),
+        description=_(u"The from addess that will appear in messages sent from this composer."),
+        required=False,
+        )
+    replyto_address = schema.TextLine(
+        title=_(u"Reply-to address"),
+        description=_(u"The reply-to addess that will appear in messages sent from this composer."),
+        required=False,
+        )
